Replace static index.html with a dynamic template and add robots.txt for webserver configuration

--- a/playbook/roles/webserver/tasks/nginx.yml
+++ b/playbook/roles/webserver/tasks/nginx.yml
@@ -24,6 +24,11 @@
     src: nginx/nginx.conf.j2
     dest: "{{ nginx_dir }}/nginx.conf"
 
+- name: Copy nginx index html
+  template:
+    src: nginx/index.html.j2
+    dest: "/usr/share/nginx/html/index.html"
+
 - name: Remove default nginx site if it exists
   file:
     path: "{{ nginx_dir }}/sites-enabled/default"
@@ -81,8 +86,8 @@
     dest: "{{ item.dest }}"
   become: true
   with_items:
-    - src: "{{ role_path }}/files/index.html"
-      dest: /usr/share/nginx/html/index.html"
+    - src: "{{ role_path }}/files/robots.txt"
+      dest: /usr/share/nginx/html/robots.txt"
     - src: "{{ role_path }}/files/ckan-local.crt"
       dest: "{{ nginx_dir }}/certs/"
     - src: "{{ role_path }}/files/ckan-local.key"
