--- a/playbook/playbook.yml
+++ b/playbook/playbook.yml
@@ -67,19 +67,6 @@
         setup_local_redis: "{{ prompt_redis.user_input | default('n') }}"
       when: deployment_action == "deploy"
 
-    - name: Prompt for setup_local_ckan_pycsw if updating
-      pause:
-        prompt: "Do you want to update local ckan-pycsw instance? (y/n)"
-      register: prompt_ckan_pycsw
-      when: deployment_action == "update"
-      no_log: false
-      run_once: true
-
-    - name: Set setup_local_ckan_pycsw fact
-      set_fact:
-        setup_local_ckan_pycsw: "{{ prompt_ckan_pycsw.user_input | default('n') }}"
-      when: deployment_action == "update"
-
     - name: Prompt for always_ckan_origin_code if deploying from scratch
       pause:
         prompt: "Do you want to clean the local CKAN repository ('src/ckan') with the origin? Remove all local changes. (y/n)"
@@ -151,19 +138,13 @@
         always_ckan_origin_code: "y"
       when: deployment_action == "update"
 
-    # Override Variables for Deploy Action
-    - name: Override setup variables if updating
-      set_fact:
-        setup_local_ckan_pycsw: "y"
-      when: deployment_action == "deploy"
-
   roles:
     - { role: common, tags: common, when: 'deployment_action == "deploy"' }
     - { role: database, tags: database, when: 'deployment_action == "deploy"' }
     - { role: solr, tags: solr, when: 'setup_local_solr == "y"' }
     - { role: redis, tags: redis, when: 'setup_local_redis == "y" and deployment_action == "deploy"' }
     - { role: ckan, tags: ckan }
-    - { role: ckan_pycsw, tags: ckan_pycsw, when: 'setup_local_ckan_pycsw == "y" or deployment_action == "deploy"' }
+    - { role: ckan_pycsw, tags: ckan_pycsw }
     - { role: webserver, tags: webserver }
     - { role: supervisor, tags: supervisor }
 
