Add SSL unverified mode configuration for pycsw
Avoid errors when using autohosted certificate like [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1129)

Not using in production environments

--- a/playbook/inventories/development/host_vars/development_01.yml
+++ b/playbook/inventories/development/host_vars/development_01.yml
@@ -332,6 +332,7 @@ pycsw_output_schema: iso19139_inspire
 pycsw_cron_days_interval: 2
 pycsw_cron_hour_start: 4
 pycsw_app_dir: "{{ ckan_src_dir }}/ckan-pycsw"
+pycsw_local_ssl_unverified: false
 #### pycsw conf
 pycsw_identification_title: Sample Geospatial Catalogue
 pycsw_identification_abstract: OGC CSW server powered by pycsw
