--- a/playbook/inventories/development/host_vars/development_01.yml
+++ b/playbook/inventories/development/host_vars/development_01.yml
@@ -197,6 +197,8 @@ ckanext__spatial__common_map__attribution: "Map tiles by <a href=\"http://openst
 ckanext__xloader__jobs_db__uri: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}:{{ ckan_database.postgres_port }}/{{ ckan_database.ckan_db }}"
 #### Enable or disable SSL certificate verification.  Setting verify to False should only be enabled during local development or testing.
 ckanext__xloader__ssl_verify: True
+#### Maximum content length for uploaded files (in bytes). Default 1000000000 (1GB)
+ckanext__xloader__max_content_length: 1000000000
 
 #### ckanext-pages
 ckanext__pages__organization: True
