--- a/playbook/roles/ckan/tasks/ckan_install_ckan_exts.yml
+++ b/playbook/roles/ckan/tasks/ckan_install_ckan_exts.yml
@@ -68,44 +68,43 @@
   become: true
   become_user: "{{ ckan_user }}"
 
-- name: Install ckanext-spatial {{ ckanext_versions.ckanext_spatial }}
+- name: Install ckan/ckanext-spatial {{ ckanext_versions.ckanext_spatial }}
   vars:
     virtualenv: "{{ ckan_virtualenv }}"
   block:
-    - name: Install ckanext-spatial {{ ckanext_versions.ckanext_spatial }}
+    - name: Install ckan/ckanext-spatial {{ ckanext_versions.ckanext_spatial }}
       become: true
       become_user: "{{ ckan_user }}"
       pip:
-        name: git+https://github.com/mjanez/ckanext-spatial.git@{{ ckanext_versions.ckanext_spatial }}#egg=ckanext-spatial
+        name: git+https://github.com/ckan/ckanext-spatial.git@{{ ckanext_versions.ckanext_spatial }}#egg=ckanext-spatial
         virtualenv: "{{ ckan_virtualenv }}"
         extra_args: -e
       register: result
 
-    - name: Install ckanext-spatial requirements
+    - name: Install ckan/ckanext-spatial requirements
       become: true
       become_user: "{{ ckan_user }}"
       pip:
-        # Use a fixed version of requirements to avoid issues with Numpy 2.0
-        requirements: https://raw.githubusercontent.com/mjanez/ckan-docker/ckan-2.9.11/ckan/req_fixes/ckanext-spatial/requirements.txt
+        requirements: "{{ virtualenv }}/src/ckanext-spatial/requirements.txt"
         virtualenv: "{{ virtualenv }}"
       when: result is success
   become: true
   become_user: "{{ ckan_user }}"
 
-- name: Install mjanez/ckanext-dcat {{ ckanext_versions.ckanext_dcat }}
+- name: Install ckan/ckanext-dcat {{ ckanext_versions.ckanext_dcat }}
   vars:
     virtualenv: "{{ ckan_virtualenv }}"
   block:
-    - name: Install mjanez/ckanext-dcat {{ ckanext_versions.ckanext_dcat }}
+    - name: Install ckan/ckanext-dcat {{ ckanext_versions.ckanext_dcat }}
       become: true
       become_user: "{{ ckan_user }}"
       pip:
-        name: git+https://github.com/mjanez/ckanext-dcat.git@{{ ckanext_versions.ckanext_dcat }}#egg=ckanext-dcat
+        name: git+https://github.com/ckan/ckanext-dcat.git@{{ ckanext_versions.ckanext_dcat }}#egg=ckanext-dcat
         virtualenv: "{{ ckan_virtualenv }}"
         extra_args: -e
       register: result
 
-    - name: Install mjanez/ckanext-dcat requirements
+    - name: Install ckan/ckanext-dcat requirements
       become: true
       become_user: "{{ ckan_user }}"
       pip:
