--- a/playbook/inventories/production/host_vars/production_01.yml
+++ b/playbook/inventories/production/host_vars/production_01.yml
@@ -140,6 +140,9 @@ ckan__preview__text_formats: "text plain text/plain text/turtle rss txt"
 ckan__preview__loadable: "html htm rdf+xml owl+xml xml n3 n-triples turtle plain atom csv tsv rss txt json arcgis_rest"
 
 #### Resource Proxy settings
+### The maximum in megabytes a resources upload can be. Default 10MB
+ckan__max_resource_size: 100
+ckan__max_image_size: 4
 ### Preview size limit, default: 1MB
 ckan__resource_proxy__max_file_size: 50048576
 ## Size of chunks to read/write__
