--- a/playbook/ansible.cfg
+++ b/playbook/ansible.cfg
@@ -10,4 +10,6 @@ roles_path = ./roles/common:./roles/ckan:./roles/database:./roles/webserver:./ro
 retry_files_save_path = ./config/tmp/retry/
 log_path = ./config/ansible.log
 stdout_callback = yaml
-collections_paths = ~/.ansible/collections:/usr/share/ansible/collections:/lib/python3.9/site-packages/ansible_collections
+
+# ### Custom ansible-galaxy collection paths
+collections_paths = ~/.ansible/collections:/usr/share/ansible/collections:{ruta-colecciones-ansible-pip-usuario-at_sistemas}
